<resources>
    <string name="app_name">First</string>
    <string name="bir">Happy Birthday</string>
    <string name="input">Input degree Celsius</string>
    <string name="btn">transform</string>
    <string name="re">result:</string>
    <string name="tm1">Team A</string>
    <string name="bt1">*3 points</string>
    <string name="bt2">*2 points</string>
    <string name="bt3">*1 point</string>
    <string name="rs">reset</string>
    <string name="fs">0</string>
    <string name="tm2">Team B</string>
    <string name="btn_dollar">Dollar</string>
    <string name="rmb">Input RMB</string>
    <string name="btn_euro">Euro</string>
    <string name="btn_won">Won</string>
    <string name="btn_open">config</string>
    <string name="btn_save">save</string>
</resources>
